Fixes alignment issues in merge request widget
Fixes some alignment and spacing issues inside of the merge
state in the merge request widget.

Closes https://gitlab.com/gitlab-org/gitlab/-/issues/280537

--- a/app/assets/stylesheets/pages/merge_requests.scss
+++ b/app/assets/stylesheets/pages/merge_requests.scss
@@ -396,10 +396,6 @@ $mr-widget-min-height: 69px;
     }
   }
 
-  .mr-widget-help {
-    padding: 10px 16px 10px ($gl-padding-8 * 7);
-  }
-
   .ci-coverage {
     float: right;
   }
